--- a/katas-grids/style2.css
+++ b/katas-grids/style2.css
@@ -33,12 +33,12 @@ body {
 .wrapper {
     display: grid;
     grid-gap: 1em;
+    grid-template-rows: auto auto 20% 20%;
     grid-template-areas:
-        "header"
-        "sidebar"
-        "content"
-        "sidebar2"
-        "footer"
+        "header header"
+        "content content"
+        "sidebar sidebar2"
+        "footer footer"
 }
 
 @media only screen and (min-width: 500px) {
@@ -55,10 +55,10 @@ body {
 @media only screen and (min-width: 600px) {
     .wrapper {
         grid-gap: 20px;
-        grid-template-columns: 120px auto 120px;
+        grid-template-columns: 20% 20% auto;
         grid-template-areas:
             "header  header  header"
-            "sidebar content sidebar2"
+            "sidebar sidebar2 content"
             "footer  footer  footer";
 
         /* CENTRAGE */
